adding comment to html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My test page</title>
   </head>
   <body>
+    <!-- This is my 1st HTML code -->
     <h1>My new Macbook Pro</h1>
     <p>This is all about my new <strong>Macbook Pro</strong> 2022 M2 Space Grey [ <a href="https://www.apple.com/in/macbook-pro/" target="_blank">Link</a> ]</p>
     <img src="../../Downloads/IMG_2254.jpeg">
